--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,6 @@ version: '${project.version}'
 main: vodzinskiy.precipitationoff.PrecipitationOff
 api-version: '1.20'
 authors: [Vodzinskiy]
+commands:
+  select:
+    usage: /select
