--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,17 @@
           <artifactId>log4j-core</artifactId>
           <version>2.17.1</version>
       </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.30</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.10.1</version>
+      </dependency>
+
   </dependencies>
 </project>
