--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,5 +4,5 @@ main: vodzinskiy.precipitationoff.PrecipitationOff
 api-version: '1.20'
 authors: [Vodzinskiy]
 commands:
-  select:
-    usage: /select
+  pptoff select:
+    usage: /<command>
