--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,12 @@
           <version>2.10.1</version>
       </dependency>
 
+      <dependency>
+          <groupId>me.lucko</groupId>
+          <artifactId>commodore</artifactId>
+          <version>2.2</version>
+          <scope>compile</scope>
+      </dependency>
+
   </dependencies>
 </project>
