--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,11 @@ version: '${project.version}'
 main: vodzinskiy.precipitationoff.PrecipitationOff
 api-version: '1.20'
 authors: [Vodzinskiy]
+
+permissions:
+  pptoff:
+    default: true
+
 commands:
-  pptoff select:
+  pptoff:
     usage: /<command>
